--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -113,6 +113,7 @@
         android:background="#3a76ef"
         app:backgroundTint="@color/white"
         android:layout_margin="24dp"
+        android:visibility="gone"
         app:srcCompat="@drawable/ic_baseline_add_24" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
